--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,16 @@
     "license": "ISC",
     "devDependencies": {
         "@types/express": "^4.17.8",
+        "@types/mongoose": "^5.7.36",
         "@types/node": "^14.10.2",
         "nodemon": "^2.0.4",
         "ts-node": "^9.0.0",
         "typescript": "^4.0.2"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "@types/jsonwebtoken": "^8.5.0",
+        "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.10.7"
     }
 }
