--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
         "typescript": "^4.0.2"
     },
     "dependencies": {
+        "@types/cors": "^2.8.7",
         "@types/jsonwebtoken": "^8.5.0",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.7"
