--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,11 @@
     },
     "dependencies": {
         "@types/cors": "^2.8.7",
+        "@types/express-validator": "^3.0.0",
         "@types/jsonwebtoken": "^8.5.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "express-validator": "^6.7.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.7"
     }
