--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,9 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.21.0",
-    "formik": "^2.2.5",
-    "formik-material-ui": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "typescript": "^3.7.5"
