--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^6.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "reactn": "^2.2.7",
     "typescript": "^3.7.5"
   },
   "scripts": {
