--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,4 @@ indent_style = space
 indent_size = 2
 charset = utf-8
 trim_trailing_whitespace = false
-insert_final_newline = false
-
-[*.md]
-indent_size = 2
+insert_final_newline = true
