--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "nodemon index.ts",
-        "build": "tsc --project ./"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@types/express": "^4.17.8",
-        "@types/mongoose": "^5.7.36",
-        "@types/node": "^14.10.2",
-        "nodemon": "^2.0.4",
-        "ts-node": "^9.0.0",
-        "typescript": "^4.0.2"
-    },
-    "dependencies": {
-        "@types/cors": "^2.8.7",
-        "@types/express-validator": "^3.0.0",
-        "@types/jsonwebtoken": "^8.5.0",
-        "@types/multer": "^1.4.5",
-        "cors": "^2.8.5",
-        "express": "^4.17.1",
-        "express-validator": "^6.7.0",
-        "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.10.7",
-        "multer": "^1.4.2"
-    }
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon src/index.ts",
+    "build": "tsc --project ./"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/mongoose": "^5.7.36",
+    "@types/node": "^14.10.2",
+    "nodemon": "^2.0.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "@types/cors": "^2.8.7",
+    "@types/express-validator": "^3.0.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-validator": "^6.7.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.7",
+    "multer": "^1.4.2"
+  }
 }
