--- a/package.json
+++ b/package.json
@@ -44,5 +44,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This is a E-Commerce app built using `React` and `Material-UI`.",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/skr571999/dummy-store-website.git"
+  },
+  "keywords": [],
+  "author": "Sachin Kumar Rajput <skr571999@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/skr571999/dummy-store-website/issues"
+  },
+  "homepage": "https://github.com/skr571999/dummy-store-website#readme"
 }
