--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "start": "node build/index.ts",
+    "start": "node build/index.js",
     "build": "tsc --project ./"
   },
   "keywords": [],
