fix home page issue

--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
   "bugs": {
     "url": "https://github.com/skr571999/dummy-store-website/issues"
   },
-  "homepage": "https://github.com/skr571999/dummy-store-website#readme"
+  "homepage": "."
 }
